@@ -1,3 +1,5 @@
+* Don't allow to close a period with asset moves not posted
+
 Version 4.6.0 - 2017-10-30
 * Bug fixes (see mercurial logs for details)
 
